# pedsim_ros

./: README.md
pedsim_gazebo_plugin/: CMakeLists.txt  package.xml
pedsim_gazebo_plugin/launch/: airport.launch  corridor_with_turtlebot3.launch.py  social_contexts.launch.py  social_contexts_turtlebot.launch.py
pedsim_gazebo_plugin/models/: actor_model.sdf
pedsim_gazebo_plugin/scripts/: pedsim_to_gazebo_world.py  spawn_pedsim_agents.py
pedsim_gazebo_plugin/src/: actor_poses_plugin.cpp
pedsim_gazebo_plugin/worlds/: social_contexts_turtlebot.world
pedsim_msgs/: CMakeLists.txt  Readme.md  mapping_rules.yaml  package.xml
pedsim_ros/: CMakeLists.txt  package.xml
pedsim_simulator/config/: PedsimSimulator.cfg
pedsim_simulator/launch/: w2_9f.launch
pedsim_simulator/scenarios/: w2_9f.xml
pedsim_simulator/src/: simulator.cpp
pedsim_srvs/: CMakeLists.txt  package.xml
pedsim_utils/: CMakeLists.txt
pedsim_visualizer/src/: sim_visualizer.cpp
