<?xml version="1.0"?>
<package format="3">
  <name>pedsim_srvs</name>
  <version>0.0.1</version>
  <description>The pedsim_srvs package</description>

  <maintainer email="okal@cs.uni-freiburg.de">batman</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_interface_packages</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>pedsim_msgs</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pedsim_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>